<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppAccounts</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_list_account">ListAccountActivity</string>
    <string name="add">Add Accounts</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="photo">Photo</string>
    <string name="type">Type</string>
    <string name="value">Value</string>
    <string name="cost">Cost</string>
    <string name="addType">Add Type</string>
    <string name="save">Save</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">E-mail</string>
    <string name="title_activity_details_account">DetailsAccount</string>
    <string name="description">Description</string>
    <string name="capital">Capital</string>
    <string name="close">Close Session</string>
    <string name="share">Share</string>
    <!-- drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
</resources>
