<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailsAccountActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Detalle de Cuenta"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
             >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingRight="10dip" />
            
            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:gravity="center_horizontal"
                android:paddingLeft="10dip"  />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceLarge"  />
            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Descripcion" 
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingRight="10dip"  />
             

            <TextView
                android:id="@+id/textViewCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Costo"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingLeft="10dip"  />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fecha Creación"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingRight="10dip"  />
             
            <TextView
                android:id="@+id/textViewCreated"
                android:layout_width="142dp"
                android:layout_height="wrap_content"
                android:text="Created"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingLeft="10dip"  />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingRight="10dip"  />
             
            <TextView
                android:id="@+id/TextViewType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tipo" 
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingLeft="10dip" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAppearance="?android:attr/textAppearanceLarge" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
